--- a/trunk/diamandas/pages/templates/feed/content_insert.html
+++ b/trunk/diamandas/pages/templates/feed/content_insert.html
@@ -1,2 +1,1 @@
-<div class="margin_feed"></div><div class="{{ cssclass }}"><a href="/w/p/{{ slug }}/"><b>{{ title }}</b></a></div>
-{{ text|safe }}<!-- -->
+<li><a href="/w/p/{{ slug }}/" class="{{ cssclass }}">{{ title }}</a> {{ text|safe }}</li><!-- -->
