--- a/trunk/diamandas/pages/templates/feed/forum_insert.html
+++ b/trunk/diamandas/pages/templates/feed/forum_insert.html
@@ -1,2 +1,1 @@
-<div class="margin_feed"></div><div class="{{ cssclass }}"><a href="/forum/topic/{{ pagination_page }}/{{ topic_id }}/">{{ prefix }}{{ topic_title }}</a></div>
-{{ text|safe }}<!-- -->
+<li><a href="/forum/topic/{{ pagination_page }}/{{ topic_id }}/" class="{{ cssclass }}">{{ prefix }}{{ topic_title }}</a> {{ text|safe }}</li><!-- -->
